--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.1",
+    "@angular/cdk": "^11.2.8",
     "@angular/common": "~11.2.1",
     "@angular/compiler": "~11.2.1",
     "@angular/core": "~11.2.1",
     "@angular/forms": "~11.2.1",
+    "@angular/material": "^11.2.8",
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
-    "rxjs": "~6.6.0",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-order-pipe": "^2.1.1",
+    "ngx-pagination": "^5.0.0",
+    "sweetalert2": "^10.16.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
